--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -6,27 +6,26 @@ import Container from "./Container.astro"
 <div id="blog">
   <Container>
       <div class="mb-12 space-y-2 text-center">
-        <h2 class="text-3xl font-bold text-gray-800 md:text-4xl dark:text-white">Latest Articles</h2>
+        <h2 class="text-3xl font-bold text-gray-800 md:text-4xl dark:text-white">Free Automation Templates</h2>
         <p class="lg:mx-auto lg:w-6/12 text-gray-600 dark:text-gray-300">
-          Quam hic dolore cumque voluptate rerum beatae et quae, tempore sunt, debitis dolorum officia
-          aliquid explicabo? Excepturi, voluptate?
+          Get started with our free automation templates. We have a wide range of templates for you to choose from.
         </p>
       </div>
       <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
         <div class="group p-6 sm:p-8 rounded-3xl bg-white border border-gray-100 dark:shadow-none dark:border-gray-700 dark:bg-gray-800 bg-opacity-50 shadow-2xl shadow-gray-600/10">
           <div class="relative overflow-hidden rounded-xl">
-            <img src="https://images.unsplash.com/photo-1661749711934-492cd19a25c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80"
-            alt="art cover" loading="lazy" width="1000" height="667" class="h-64 w-full object-cover object-top transition duration-500 group-hover:scale-105"/>
+            <img src="https://cdn.discordapp.com/attachments/1283467168976994304/1293257024980652156/image.png?ex=6706b6f6&is=67056576&hm=0f10ef05b706b3c5121cb1392c9709a0f9b4d775af7750f9d6e44119b2aee80e&"
+            alt="art cover" loading="lazy" width="1000" height="300px" class="h-300px object-cover object-top transition duration-500 group-hover:scale-105"/>
           </div>
           <div class="mt-6 relative">
             <h3 class="text-2xl font-semibold text-gray-800 dark:text-white">
-              De fuga fugiat lorem ispum laboriosam expedita.
+              Automaticall Pause SL Campaigns For Holidays
             </h3>
             <p class="mt-6 mb-8 text-gray-600 dark:text-gray-300">
-              Voluptates harum aliquam totam, doloribus eum impedit atque! Temporibus...
+             When there is a holiday, you don't want to be sending emails. Use this template to automatically pause your campaigns.
             </p>
             <a class="inline-block" href="#">
-              <span class="text-info dark:text-blue-300">Read more</span>
+              <span class="text-info dark:text-blue-300">Download</span>
             </a>
           </div>
           
@@ -44,7 +43,7 @@ import Container from "./Container.astro"
               Voluptates harum aliquam totam, doloribus eum impedit atque! Temporibus...
             </p>
             <a class="inline-block" href="#">
-              <span class="text-info dark:text-blue-300">Read more</span>
+              <span class="text-info dark:text-blue-300">Download</span>
             </a>
           </div>
           
@@ -62,7 +61,7 @@ import Container from "./Container.astro"
               Voluptates harum aliquam totam, doloribus eum impedit atque! Temporibus...
             </p>
             <a class="inline-block" href="#">
-              <span class="text-info dark:text-blue-300">Read more</span>
+              <span class="text-info dark:text-blue-300">Download</span>
             </a>
           </div>
           
