--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -11,10 +11,9 @@ import Container from "./Container.astro"
       </svg>
       
       <h2 class="my-8 text-2xl font-bold text-gray-700 dark:text-white md:text-4xl">
-        A technology-first approach to payments
-        and finance
+        Sales Operations Made Simple and Effective.
       </h2>
-      <p class="text-gray-600 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ad ipsum pariatur autem, fugit laborum in atque amet obcaecati? Nisi minima aspernatur, quidem nulla cupiditate nam consequatur eligendi magni adipisci.</p>
+      <p class="text-gray-600 dark:text-gray-300">From enhancing data enrichment to setting up outreach infrastructure for cold calling and email campaigns, we handle it all, ensuring your team is equipped for success. </p>
     </div>
     <div
       class="mt-16 grid divide-x divide-y divide-gray-100 dark:divide-gray-700 overflow-hidden rounded-3xl border border-gray-100 text-gray-600 dark:border-gray-700 sm:grid-cols-2 lg:grid-cols-4 lg:divide-y-0 xl:grid-cols-4"
@@ -33,10 +32,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              First feature
+              Lead Generation / Prospecting
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Finding the right leads can be tough. We help you find leads using tools like Clay, N8N, and more.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -61,10 +60,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Second feature
+            Infrastructure Setup
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Trust our experienced team to lay the groundwork for effective cold outreach campaigns while you focus on client relationships.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -89,10 +88,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Third feature
+              Integrations
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              From CRM to email marketing tools, we help you integrate the right tools to streamline your sales operations.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -121,10 +120,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              More features
+              Consultation
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Get in touch with our expert to discuss your sales operations and how we can help you streamline your processes.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
