--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -9,17 +9,18 @@ import Container from "./Container.astro"
         <div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600"></div>
     </div>
     <Container>
+
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
-                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Shaping a world with <span class="text-primary dark:text-white">reimagination.</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio incidunt nam itaque sed eius modi error totam sit illum. Voluptas doloribus asperiores quaerat aperiam. Quidem harum omnis beatae ipsum soluta!</p>
+                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Automations For <span class="text-primary dark:text-white">Forward Thinking SDRs.</span></h1>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">Streamline your operations with AI-driven automation. We focus on helping companies save time, improve efficiency, and simplify reporting, allowing you to dedicate your efforts to what matters most.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                     >
                       <span class="relative text-base font-semibold text-white"
-                        >Get started</span
+                        >Book A Free Consultation</span
                       >
                     </a>
                     <a
@@ -28,11 +29,11 @@ import Container from "./Container.astro"
                     >
                       <span
                         class="relative text-base font-semibold text-primary dark:text-white"
-                        >Learn more</span
+                        >Get Free Templates</span
                       >
                     </a>
                 </div>
-                <div class="hidden py-8 mt-16 border-y border-gray-100 dark:border-gray-800 sm:flex justify-between">
+                <!-- <div class="hidden py-8 mt-16 border-y border-gray-100 dark:border-gray-800 sm:flex justify-between">
                     <div class="text-left">
                         <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The lowest price</h6>
                         <p class="mt-2 text-gray-500">Some text here</p>
@@ -45,26 +46,27 @@ import Container from "./Container.astro"
                         <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The most loved</h6>
                         <p class="mt-2 text-gray-500">Some text here</p>
                     </div>
-                </div>
+                </div> -->
             </div>
-            <div class="mt-12 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/microsoft.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+            
+            <div class="mt-24 mb-[-80px] grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
+                <div class="p-4 grayscale-0 transition duration-200 hover:grayscale-0">
+                    <img src="./images/clients/make.png" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                   </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                  <img src="./images/clients/airbnb.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                <div class="p-4 grayscale-0 transition duration-200 hover:grayscale-0">
+                  <img src="./images/clients/hubspot.png" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
-                <div class="p-4 flex grayscale transition duration-200 hover:grayscale-0">
-                  <img src="./images/clients/google.svg" class="h-9 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
+                <div class="p-4 flex grayscale-0 transition duration-200 hover:grayscale-0">
+                  <img src="./images/clients/clay.png" class="h-9 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/ge.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                <div class="p-4 grayscale-0 transition duration-200 hover:grayscale-0">
+                    <img src="./images/clients/at.png" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                   </div>
-                  <div class="p-4 flex grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/netflix.svg" class="h-8 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
+                  <div class="p-4 flex grayscale-0 transition duration-200 hover:grayscale-0">
+                    <img src="./images/clients/Zapire.png" class="h-8 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
                   </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/google-cloud.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                <div class="p-4 grayscale-0 transition duration-200 hover:grayscale-0">
+                    <img src="./images/clients/customcode.png" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
               </div>
         </div>
