--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -52,6 +52,11 @@ import Container from "./Container.astro";
                                     <span>Free Templates</span>
                                 </a>
                             </li>
+                            <li>
+                                <a href="#blog" class="block md:px-4 transition hover:text-primary">
+                                    <span>Portfolio</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
 
