--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -49,7 +49,7 @@ import Container from "./Container.astro"
                 </div> -->
             </div>
             
-            <div class="mt-24 mb-[-80px] grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
+            <!-- <div class="mt-24 mb-[-80px] grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
                 <div class="p-4 grayscale-0 transition duration-200 hover:grayscale-0">
                     <img src="./images/clients/make.png" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                   </div>
@@ -68,7 +68,7 @@ import Container from "./Container.astro"
                 <div class="p-4 grayscale-0 transition duration-200 hover:grayscale-0">
                     <img src="./images/clients/customcode.png" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
-              </div>
+              </div> -->
         </div>
     </Container>
 </div>
