--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -16,7 +16,7 @@ import Container from "./Container.astro"
                 <p class="mt-8 text-gray-700 dark:text-gray-300">Streamline your operations with AI-driven automation. We focus on helping companies save time, improve efficiency, and simplify reporting, allowing you to dedicate your efforts to what matters most.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
-                      href="#"
+                      href="https://calendly.com/ayushdungriyal2/manage-all-accounts"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                     >
                       <span class="relative text-base font-semibold text-white"
@@ -24,7 +24,7 @@ import Container from "./Container.astro"
                       >
                     </a>
                     <a
-                      href="#"
+                      href="#blogs"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 dark:before:border-gray-700 dark:before:bg-gray-800 sm:w-max"
                     >
                       <span
