--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,11 +12,11 @@ import AppHeader from "../components/AppHeader.astro"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="Template built with tailwindcss using Tailus blocks v2">
-		<title>Auto B2B -</title>
+		<title>Auto B2B</title>
 
 		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
 	</head>
-	<body class="bg-white dark:bg-gray-900">
+	<body class="bg-white dark:bg-gray-900i">
 		<AppHeader/>
 		<slot />
 		<AppFooter/>
