--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -5,8 +5,9 @@ import Container from "./Container.astro"
 
 <div class="relative py-16">
   <div aria-hidden="true" class="absolute inset-0 h-max w-full m-auto grid grid-cols-2 -space-x-52 opacity-40 dark:opacity-20">
-    <div class="blur-[106px] h-56 bg-gradient-to-br from-primary to-purple-400 dark:from-blue-700"></div>
-    <div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600"></div>
+    <div class="blur-[106px] h-56 bg-gradient-to-br from-[#FFF4E0] to-[#F94949]"></div>
+    <div class="blur-[106px] h-32 bg-gradient-to-r from-[#F94949] to-[#FFF4E0]"></div>
+    
   </div>
   <Container>
     <div class="relative">
@@ -53,8 +54,8 @@ import Container from "./Container.astro"
         />
       </div>
       <div class="mt-6 m-auto space-y-6 md:w-8/12 lg:w-7/12">
-        <h1 class="text-center text-4xl font-bold text-gray-800 dark:text-white md:text-5xl">Get Started now</h1>
-        <p class="text-center text-xl text-gray-600 dark:text-gray-300">
+        <h1 class="text-center text-4xl font-bold text-gray-800  md:text-5xl">Get Started now</h1>
+        <p class="text-center text-xl text-gray-600">
           Be part of our growing community and start automating your workflows today.
         </p>
         <div class="flex flex-wrap justify-center gap-6">
