--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -10,15 +10,15 @@ import Container from "./Container.astro"
         <path fill-rule="evenodd" d="M9 4.5a.75.75 0 01.721.544l.813 2.846a3.75 3.75 0 002.576 2.576l2.846.813a.75.75 0 010 1.442l-2.846.813a3.75 3.75 0 00-2.576 2.576l-.813 2.846a.75.75 0 01-1.442 0l-.813-2.846a3.75 3.75 0 00-2.576-2.576l-2.846-.813a.75.75 0 010-1.442l2.846-.813A3.75 3.75 0 007.466 7.89l.813-2.846A.75.75 0 019 4.5zM18 1.5a.75.75 0 01.728.568l.258 1.036c.236.94.97 1.674 1.91 1.91l1.036.258a.75.75 0 010 1.456l-1.036.258c-.94.236-1.674.97-1.91 1.91l-.258 1.036a.75.75 0 01-1.456 0l-.258-1.036a2.625 2.625 0 00-1.91-1.91l-1.036-.258a.75.75 0 010-1.456l1.036-.258a2.625 2.625 0 001.91-1.91l.258-1.036A.75.75 0 0118 1.5zM16.5 15a.75.75 0 01.712.513l.394 1.183c.15.447.5.799.948.948l1.183.395a.75.75 0 010 1.422l-1.183.395c-.447.15-.799.5-.948.948l-.395 1.183a.75.75 0 01-1.422 0l-.395-1.183a1.5 1.5 0 00-.948-.948l-1.183-.395a.75.75 0 010-1.422l1.183-.395c.447-.15.799-.5.948-.948l.395-1.183A.75.75 0 0116.5 15z" clip-rule="evenodd" />
       </svg>
       
-      <h2 class="my-8 text-2xl font-bold text-gray-700 dark:text-white md:text-4xl">
+      <h2 class="my-8 text-2xl font-bold text-gray-700 darkcanceltext-white md:text-4xl">
         Sales Operations Made Simple and Effective.
       </h2>
-      <p class="text-gray-600 dark:text-gray-300">From enhancing data enrichment to setting up outreach infrastructure for cold calling and email campaigns, we handle it all, ensuring your team is equipped for success. </p>
+      <p class="text-gray-600 darkcanceltext-gray-300">From enhancing data enrichment to setting up outreach infrastructure for cold calling and email campaigns, we handle it all, ensuring your team is equipped for success. </p>
     </div>
     <div
-      class="mt-16 grid divide-x divide-y divide-gray-100 dark:divide-gray-700 overflow-hidden rounded-3xl border border-gray-100 text-gray-600 dark:border-gray-700 sm:grid-cols-2 lg:grid-cols-4 lg:divide-y-0 xl:grid-cols-4"
+      class="mt-16 grid divide-x divide-y divide-gray-100 darkcanceldivide-gray-700 overflow-hidden rounded-3xl border border-gray-100 text-gray-600 darkcancelborder-gray-700 sm:grid-cols-2 lg:grid-cols-4 lg:divide-y-0 xl:grid-cols-4"
     >
-      <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+      <div class="group relative bg-white transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
             src="https://cdn-icons-png.flaticon.com/512/4341/4341139.png"
@@ -30,11 +30,11 @@ import Container from "./Container.astro"
 
           <div class="space-y-2">
             <h5
-              class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
+              class="text-xl font-semibold text-gray-700 darkcanceltext-white transition group-hover:text-secondary"
             >
               Lead Generation / Prospecting
             </h5>
-            <p class="text-gray-600 dark:text-gray-300">
+            <p class="text-gray-600 darkcanceltext-gray-300">
               Finding the right leads can be tough. We help you find leads using tools like Clay, N8N, and more.
             </p>
           </div>
@@ -46,7 +46,7 @@ import Container from "./Container.astro"
           </a>
         </div>
       </div>
-      <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+      <div class="group relative bg-white darkcancelbg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
             src="https://cdn-icons-png.flaticon.com/512/4341/4341134.png"
@@ -58,11 +58,11 @@ import Container from "./Container.astro"
 
           <div class="space-y-2">
             <h5
-              class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
+              class="text-xl font-semibold text-gray-700 darkcanceltext-white transition group-hover:text-secondary"
             >
             Infrastructure Setup
             </h5>
-            <p class="text-gray-600 dark:text-gray-300">
+            <p class="text-gray-600 darkcanceltext-gray-300">
               Trust our experienced team to lay the groundwork for effective cold outreach campaigns while you focus on client relationships.
             </p>
           </div>
@@ -74,7 +74,7 @@ import Container from "./Container.astro"
           </a>
         </div>
       </div>
-      <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+      <div class="group relative bg-white darkcancelbg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
             src="https://cdn-icons-png.flaticon.com/512/4341/4341160.png"
@@ -86,11 +86,11 @@ import Container from "./Container.astro"
 
           <div class="space-y-2">
             <h5
-              class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
+              class="text-xl font-semibold text-gray-700 darkcanceltext-white transition group-hover:text-secondary"
             >
               Integrations
             </h5>
-            <p class="text-gray-600 dark:text-gray-300">
+            <p class="text-gray-600 darkcanceltext-gray-300">
               From CRM to email marketing tools, we help you integrate the right tools to streamline your sales operations.
             </p>
           </div>
@@ -103,10 +103,10 @@ import Container from "./Container.astro"
         </div>
       </div>
       <div
-        class="group relative bg-gray-50 dark:bg-gray-900 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10"
+        class="group relative bg-gray-50 darkcancelbg-gray-900 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10"
       >
         <div
-          class="relative space-y-8 py-12 p-8 transition duration-300 group-hover:bg-white dark:group-hover:bg-gray-800"
+          class="relative space-y-8 py-12 p-8 transition duration-300 group-hover:bg-white darkcancelgroup-hover:bg-gray-800"
         >
           <img
             src="https://cdn-icons-png.flaticon.com/512/4341/4341025.png"
@@ -118,11 +118,11 @@ import Container from "./Container.astro"
 
           <div class="space-y-2">
             <h5
-              class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
+              class="text-xl font-semibold text-gray-700 darkcanceltext-white transition group-hover:text-secondary"
             >
               Consultation
             </h5>
-            <p class="text-gray-600 dark:text-gray-300">
+            <p class="text-gray-600 darkcanceltext-gray-300">
               Get in touch with our expert to discuss your sales operations and how we can help you streamline your processes.
             </p>
           </div>
