--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -22,19 +22,19 @@ import Container from "./Container.astro";
           />
         </div>
         <div class="md:7/12 lg:w-1/2">
-          <h2 class="text-3xl font-bold text-gray-900 md:text-4xl dark:text-white">
+          <h2 class="text-3xl font-bold text-gray-700 md:text-4xl darkcanceltext-white">
             Your tech partner for life
           </h2>
-          <p class="my-8 text-gray-600 dark:text-gray-300">
+          <p class="my-8 text-gray-600 darkcanceltext-gray-300">
             We are building applications from past 8+ years for web and mobile. Building MVPs using No-code tools or creating a beautiful and scalable mobile application, we got the talent, energy and world class support at your fingertips.
  <br> <br> 
  Random Labs, best NoCode Agency is all about Speed of execution, right tools and integrations, minimal cost and  robust solutions
           </p>
-          <div class="divide-y space-y-4 divide-gray-100 dark:divide-gray-800">
+          <div class="divide-y space-y-4 divide-gray-100 darkcanceldivide-gray-800">
             <div class="mt-8 flex gap-4 md:items-center">
-              <div class="w-12 h-12 flex gap-4 rounded-full bg-indigo-100 dark:bg-indigo-900/20">
+              <div class="w-12 h-12 flex gap-4 rounded-full bg-[#F94949] darkcancelbg-indigo-900/20">
                 <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
-                  <text x="50%" y="25%" text-anchor="middle" font-size="20" font-weight="bold" fill="#5EEAD3" dy=".35em">
+                  <text x="50%" y="25%" text-anchor="middle" font-size="20" font-weight="bold" fill="white" dy=".35em">
                     $
                   </text>
                 </svg>
@@ -42,19 +42,19 @@ import Container from "./Container.astro";
                      
               </div>
               <div class="w-5/6">
-                <h4 class="font-semibold text-lg text-gray-700  dark:text-teal-300">Starting From 10$/hour</h3>
-                <p class="text-gray-500 dark:text-gray-400">Our basic services starts at just 10$/hour.</p>
+                <h4 class="font-semibold text-lg text-gray-700  darkcanceltext-teal-300">Starting From 40$/hour</h3>
+                <p class="text-gray-500 darkcanceltext-gray-400">Our basic services starts at just 40$/hour.</p>
               </div> 
             </div> 
             <div class="pt-4 flex gap-4 md:items-center">
-              <div class="w-12 h-12 flex gap-4 rounded-full bg-teal-100 dark:bg-teal-900/20">  
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 m-auto text-indigo-500 dark:text-indigo-400">
+              <div class="w-12 h-12 flex gap-4 rounded-full bg-[#F94949] darkcancelbg-teal-900/20">  
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 m-auto text-white darkcanceltext-indigo-400">
                   <path fill-rule="evenodd" d="M4.848 2.771A49.144 49.144 0 0112 2.25c2.43 0 4.817.178 7.152.52 1.978.292 3.348 2.024 3.348 3.97v6.02c0 1.946-1.37 3.678-3.348 3.97a48.901 48.901 0 01-3.476.383.39.39 0 00-.297.17l-2.755 4.133a.75.75 0 01-1.248 0l-2.755-4.133a.39.39 0 00-.297-.17 48.9 48.9 0 01-3.476-.384c-1.978-.29-3.348-2.024-3.348-3.97V6.741c0-1.946 1.37-3.68 3.348-3.97zM6.75 8.25a.75.75 0 01.75-.75h9a.75.75 0 010 1.5h-9a.75.75 0 01-.75-.75zm.75 2.25a.75.75 0 000 1.5H12a.75.75 0 000-1.5H7.5z" clip-rule="evenodd" />
                 </svg>                                      
               </div>
               <div class="w-5/6">
-                <h4 class="font-semibold text-lg text-gray-700 dark:text-indigo-300">Dedicated Account Manager</h3>
-                <p class="text-gray-500 dark:text-gray-400">For each client, we assign an account manager who connects with you daily to ensure we stay on top of your requests and needs.</p>
+                <h4 class="font-semibold text-lg text-gray-700 darkcanceltext-indigo-300">Dedicated Account Manager</h3>
+                <p class="text-gray-500 darkcanceltext-gray-400">For each client, we assign an account manager who connects with you daily to ensure we stay on top of your requests and needs.</p>
               </div> 
             </div> 
           </div>
