--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -4,7 +4,7 @@ import Container from "./Container.astro";
 ---
 
 <footer class="pb-20">
-    <div class="container mx-auto px-4">
+    <div id="footer" class="container mx-auto px-4">
         <div class="grid md:grid-cols-12 gap-8">
             <!-- Team Section - Left -->
             <div class="md:col-span-7">
@@ -94,10 +94,10 @@ import Container from "./Container.astro";
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Contact</h3>
                     <ul class="space-y-3">
                         <li>
-                            <a href="#" class="text-gray-500 hover:text-primary">Book a meeting</a>
+                            <a href="https://calendly.com/ayushdungriyal2/intro-call" class="text-gray-500 hover:text-primary">Book a meeting</a>
                         </li>
                         <li>
-                            <a href="mailto:contact@example.com" class="text-gray-500 hover:text-primary">contact@example.com</a>
+                            <p class="text-gray-500 hover:text-primary">ayush@autob2b.site</p>
                         </li>
                     </ul>
                 </div>
