--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -48,12 +48,12 @@ import Container from "./Container.astro";
                                 </a>
                             </li>
                             <li>
-                                <a href="#blog" class="block md:px-4 transition hover:text-primary">
+                                <a href="#templates" class="block md:px-4 transition hover:text-primary">
                                     <span>Free Templates</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#templates" class="block md:px-4 transition hover:text-primary">
+                                <a href="#footer" class="block md:px-4 transition hover:text-primary">
                                     <span>Team</span>
                                 </a>
                             </li>
@@ -62,7 +62,7 @@ import Container from "./Container.astro";
 
                     <div class="mt-12 lg:mt-0">
                         <a
-                            href="https://calendly.com/ayushdungriyal2/manage-all-accounts"
+                            href="https://calendly.com/ayushdungriyal2/intro-call"
                             class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                             >
                             <span class="relative text-sm font-semibold text-white"
